add with statements around project templates for source/destinations
Signed-off-by: lukepatrick <lukephilips@gmail.com>

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           helm repo add dandydeveloper https://dandydeveloper.github.io/charts/
           helm dependency build charts/argo-cd/
-          helm template charts/argo-cd/ -s templates/crds/* | kubectl apply -f -
+          helm template charts/argo-cd/ --set server.extensions.enabled=true -s templates/crds/* | kubectl apply -f -
 
       - name: Skip HPA tests of ArgoCD
         if: contains(steps.list-changed.outputs.changed_charts, 'argo-cd')
