feat(argo-cd): Set aggregate roles only for using resources, with argocdextensions also
Signed-off-by: Hyeonmin Park <hyeonmin.park@kennysoft.kr>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2890,7 +2890,7 @@ notifications:
         ## Has higher precedence over `notifications.bots.slack.pdb.minAvailable`
         maxUnavailable: ""
 
-      ## Slack bot imabe
+      ## Slack bot image
       image:
         # -- Repository to use for the Slack bot
         # @default -- `""` (defaults to global.image.repository)
