--- a/charts/argo-workflows/templates/controller/workflow-role.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-role.yaml
@@ -42,6 +42,7 @@ rules:
       - argoproj.io
     resources:
       - workflowtasksets
+      - workflowartifactgctasks
     verbs:
       - list
       - watch
@@ -49,6 +50,7 @@ rules:
       - argoproj.io
     resources:
       - workflowtasksets/status
+      - workflowartifactgctasks/status
     verbs:
       - patch
   {{- end }}
