fix(argo-events): webhook.image.tag value now overrides the tag in the argo-events webhook deployment.
Signed-off-by: Pedro Salgado <steenzout@users.noreply.github.com>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -17,3 +17,4 @@ annotations:
   artifacthub.io/changes: |
     - "[Fixed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)
     - "[Fixed]: generated value for app.kubernetes.io/version label is now valid even when defining a controller/webhook .image.tag with a SHA digest"
+    - "[Fixed]: webhook.image.tag value now overrides the tag in the webhook deployment"
