--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -133,7 +133,7 @@ configs:
     timeout.reconciliation: 180s
 
     # -- Timeout to refresh application data as well as target manifests cache
-    timeout.hard.reconciliation: 0
+    timeout.hard.reconciliation: 0s
 
     # Dex configuration
     # dex.config: |
